--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prettier:fix": "prettier --config ./.prettierrc --write \"src/{app,environments}/**/*{.ts, .html, .scss}\" ",
+    "prettier:verify": "prettier --config ./.prettierrc --list-different \"src/{app,environments}/**/*{.ts, .html, .scss}\" "
   },
   "private": true,
   "dependencies": {
@@ -33,6 +35,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.8.4",
     "typescript": "~4.8.2"
   }
 }
